--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!-- main Style & bootstrap -->
+    <!-- main Style & bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css">
     <!-- for fontawesome -->
@@ -29,12 +29,30 @@
           </div>
           <div class="menu-content m-3 py-2">
             <ul class="menu list-unstyled fw-bold ">
-              <li class="my-3 py-3 px-2 rounded-3 "><i class="fas fa-cogs me-2 ms-1 "></i> <span> Setting</span></li>
-              <li class="my-3 py-3 px-2 rounded-3"><i class="fas fa-chart-line me-3 ms-1"></i> <span> Dashboard </span> </li>
-              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center"><i class="fas fa-caret-right mx-2 "></i> <span><i class="fas fa-check me-1"></i> Daily Tasks </span> </li>
-              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center"><i class="fas fa-caret-right mx-2 "></i> <span><i class="fas fa-heart me-1"></i> Summary </span> </li>
-              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center"><i class="fas fa-caret-right mx-2 "></i> <span><i class="fas fa-calendar-week me-1"></i> Avalibility</span> </li>
-              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center"><i class="fas fa-caret-right mx-2 "></i> <span><i class="fas fa-archive me-1"></i> Archive </span> </li>
+              <li class="my-3 py-3 px-2 rounded-3 ">
+                <i class="fas fa-cogs me-2 ms-1 "></i> 
+                <span> Setting</span>
+              </li>
+              <li class="my-3 py-3 px-2 rounded-3">
+                <i class="fas fa-chart-line me-3 ms-1"></i> 
+                <span> Dashboard </span> 
+              </li>
+              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center">
+                <i class="fas fa-caret-right mx-2 "></i> 
+                <span> <i class="fas fa-check me-1"></i> Daily Tasks </span> 
+              </li>
+              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center">
+                <i class="fas fa-caret-right mx-2 "></i> 
+                <span> <i class="fas fa-heart me-1"></i> Summary </span> 
+              </li>
+              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center">
+                <i class="fas fa-caret-right mx-2 "></i> 
+                <span><i class="fas fa-calendar-week me-1"></i> Avalibility </span> 
+              </li>
+              <li class="my-3 py-3 px-2 rounded-3 d-flex align-items-center">
+                <i class="fas fa-caret-right mx-2 "></i> 
+                <span><i class="fas fa-archive me-1"></i> Archive </span> 
+              </li>
             </ul>
           </div>
           <div class="new-project d-flex justify-content-center align-items-center">
@@ -44,34 +62,34 @@
   </header>
   <!--  end dashboard -->
   <!-- start model -->
-     <div class="add-projects p-4 " id="add">
-       <div class="header-add d-flex justify-content-between align-items-center mt-3 mb-5">
+    <div class="add-projects p-4 " id="add">
+        <div class="header-add d-flex justify-content-between align-items-center mt-3 mb-5">
           <i class="fas fa-tasks text-white fs-4"></i>
           <h3 class=" text-white fw-bold">Add New Project</h3>
           <i class="fas fa-times text-white fs-4 togel2 " ></i>
-       </div>
-       <div class="details d-flex flex-column mx-3 ">
-         <label for="" class="text-white my-1 fs-4 "> Project Name : </label>
-         <input type="text" name="" value="" id="candidate" class="rounded-3" placeholder="Add Your Project Name" required>
+        </div>
+        <div class="details d-flex flex-column mx-3 ">
+          <label for="" class="text-white my-1 fs-4 "> Project Name : </label>
+          <input type="text" name="" value="" id="candidate" class="rounded-3" placeholder="Add Your Project Name" required>
 
-         <label for="" class="text-white my-1 fs-4"> Project Discribtion :</label>
+          <label for="" class="text-white my-1 fs-4"> Project Discribtion :</label>
           <textarea name="" rows="3" cols="80" id="candidate2" class="rounded-3" placeholder="Add Your Project Discribtion" required></textarea>
 
-         <label for="" class="text-white my-1 fs-4"> Project Date :</label>
-         <input type="time" name="" value="" id="candidate3" class="rounded-3" placeholder="Add Your Project Date" required>
+          <label for="" class="text-white my-1 fs-4"> Project Date :</label>
+          <input type="date" name="" value="" id="candidate3" class="rounded-3" placeholder="Add Your Project Date" required>
 
-         <label for="" class="text-white my-1 fs-4"> Project Time :</label>
-         <input type="date" name="" value="" id="candidate4" class="rounded-3 mb-3" placeholder="Add Your Project Time" required>
-       </div>
-           <button type="button" class="btn btn-success" onclick="addItem()"class="mt-3 ">Add Project</button>
-     </div>
+          <label for="" class="text-white my-1 fs-4"> Project Time :</label>
+          <input type="time" name="" value="" id="candidate4" class="rounded-3 mb-3" placeholder="Add Your Project Time" required>
+        </div>
+          <button type="button" class="btn btn-success mt-3"   onclick="addItem()"   > Add Project</button>
+    </div>
   <!-- end model -->
   <!-- start Page-->
   <div class="my-page p-3 pb-0" >
-    <div class="container ">
-       <div class="row">
-         <!-- start header -->
-         <div class="col-lg-12">
+    <div class="container">
+        <div class="row">
+          <!-- start header -->
+          <div class="col-lg-12">
             <div class="header-page p-3 d-flex justify-content-between align-items-center">
                 <div class="Logo">
                   <p class="fs-2 fw-bold m-0"> <i class="fas fa-check text-dark"></i> Daily Tasks</p>
@@ -82,64 +100,64 @@
                     <img src="imgs/mohamed abdelhalem.jpg" alt="Mohamed Abdelhalem" class="mohamed-img">
                 </div>
             </div>
-         </div>
-         <!-- end header -->
-         <!-- start discribtion -->
-         <div class="col-lg-8 me-auto">
+          </div>
+          <!-- end header -->
+          <!-- start discribtion -->
+          <div class="col-lg-8 me-auto">
             <div class="discribtion px-3">
-               <p class="m-0"> Click <span class="togel">+New </span> To Create New List & Wait For Project Manager Card ,
+              <p class="m-0"> Click <span class="togel">+New </span> To Create New List & Wait For Project Manager Card ,
                                                         don't Create A Card By Yourself To Manage a Good Table  </p>
             </div>
-         </div>
-         <!-- end discribtion -->
-         <!-- start status -->
-         <div class="col-lg-12 ">
+          </div>
+          <!-- end discribtion -->
+          <!-- start status -->
+          <div class="col-lg-12 ">
            <div class="container ">
              <div class="row my-4">
                <div class="col-lg-4 my-1">
                     <div class="nxtUp d-flex justify-content-between align-items-center py-1 px-3 rounded-3">
                                 <div class="status">
-                                  <p class="m-0 fs-4 fw-bold"> Next Up</p>
+                                  <p class="m-0 fs-4 fw-bold" onclick="showData()"> In Progress</p>
                                 </div>
                                 <div class="number">
-                                   <span class="num"> 5</span>
+                                   <span id="num-progress"> 0 </span>
                                 </div>
                     </div>
                </div>
                <div class="col-lg-4 my-1">
                    <div class="inProgress d-flex justify-content-between align-items-center py-1 px-3 rounded-3">
                                <div class="status">
-                                 <p class="m-0 fs-4 fw-bold"> In Progress</p>
+                                 <p class="m-0 fs-4 fw-bold"> Completed</p>
                                </div>
                                <div class="number">
-                                  <span class="num"> 3</span>
+                                  <span id="num-complete"> 0 </span>
                                </div>
                    </div>
                </div>
                <div class="col-lg-4 my-1">
-                   <div class="complete d-flex justify-content-between align-items-center py-1 px-3 rounded-3">
-                               <div class="status">
-                                 <p class="m-0 fs-4 fw-bold"> Complete</p>
-                               </div>
-                               <div class="number">
-                                  <span class="num"> 0</span>
-                               </div>
-
-                   </div>
+                  <div class="complete d-flex justify-content-between align-items-center py-1 px-3 rounded-3">
+                              <div class="status">
+                                <p class="m-0 fs-4 fw-bold" onclick="showdelData()" > Deleted </p>
+                              </div>
+                              <div class="number">
+                                <span id="num-delete"> 0 </span>
+                              </div>
+                  </div>
                </div>
              </div>
            </div>
-         </div>
+          </div>
          <!-- end status -->
        </div>
        <!-- start projects -->
-       <div class="row  bg-white rounded-3 p-4">
-             <div class="col-lg-12 ">
-               <div class="projects d-flex flex-wrap  align-items-center" id="allProjects">
-               </div>
-             </div>
-       </div>
-       <!-- end projects -->
+        <div class="row  bg-white rounded-3 p-4">
+            <div class="col-lg-12 ">
+              <div class="projects d-flex flex-wrap  align-items-center" id="allProjects">
+                    
+              </div>
+            </div>
+        </div>
+        <!-- end projects -->
     </div>
   </div>
   <!-- end Page-->
