--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
     <title> To Do Tasks</title>
   </head>
   <body>
-
   <!--  start dashboard -->
   <header id="dashboard" class="py-3 px-1">
         <div class="d-flex flex-column content h-100">
           <div class="person d-flex justify-content-between align-items-center bg-white py-2 px-2 m-1 rounded-3">
-             <div class="person-img d-flex justify-content-between align-items-center">
-               <img src="imgs/mohamed abdelhalem.jpg" alt="Mohamed Abdelhalem" class="mohamed-img">
-               <p class="person-name m-0 mx-2 h6"> Mohamed Abd El-Halem</p>
-             </div>
-             <div class="icon d-flex flex-column">
-               <i class="fas fa-caret-up "></i>
-               <i class="fas fa-caret-down "></i>
-             </div>
+            <div class="person-img d-flex justify-content-between align-items-center">
+              <img src="imgs/mohamed abdelhalem.jpg" alt="Mohamed Abdelhalem" class="mohamed-img">
+              <p class="person-name m-0 mx-2 h6"> Mohamed Abd El-Halem</p>
+            </div>
+            <div class="icon d-flex flex-column">
+              <i class="fas fa-caret-up "></i>
+              <i class="fas fa-caret-down "></i>
+            </div>
           </div>
           <div class="menu-content m-3 py-2">
             <ul class="menu list-unstyled fw-bold ">
@@ -75,13 +74,10 @@
         <div class="details d-flex flex-column mx-3 ">
           <label for="" class="text-white my-1 fs-4 "> Project Name : </label>
           <input type="text" name="" value="" id="candidate" class="rounded-3" placeholder="Add Your Project Name" required>
-
           <label for="" class="text-white my-1 fs-4"> Project Description :</label>
           <textarea name="" rows="3" cols="80" id="candidate2" class="rounded-3" placeholder="Add Your Project Discribtion" required></textarea>
-
           <label for="" class="text-white my-1 fs-4"> Project Date :</label>
           <input type="date" name="" value="" id="candidate3" class="rounded-3" required>
-
           <label for="" class="text-white my-1 fs-4"> Project Time :</label>
           <input type="time" name="" value="" id="candidate4" class="rounded-3 mb-3" required>
         </div>
@@ -116,48 +112,48 @@
           <!-- end discribtion -->
           <!-- start status -->
           <div class="col-lg-12 ">
-           <div class="container ">
-             <div class="row my-4">
-               <div class="col-lg-4 my-1">
+            <div class="container ">
+              <div class="row my-4">
+                <div class="col-lg-4 my-1">
                     <div class="nxtUp d-flex justify-content-between align-items-center py-1 px-3 rounded-3" id="inprogress">
                                 <div class="status">
-                                  <p class="m-0 fs-4 fw-bold" onclick="showData()"> In Progress</p>
+                                  <p class="m-0 fs-4 fw-bold" id="progs" onclick="showData()"> In Progress</p>
                                 </div>
                                 <div class="number">
-                                   <span id="num-progress"> 0 </span>
+                                  <span id="num-progress"> 0 </span>
                                 </div>
                     </div>
-               </div>
-               <div class="col-lg-4 my-1">
-                   <div class="complete d-flex justify-content-between align-items-center py-1 px-3 rounded-3" id="complete">
-                               <div class="status">
-                                 <p class="m-0 fs-4 fw-bold" onclick="showCompleteData()"> Completed</p>
-                               </div>
-                               <div class="number">
+                </div>
+                <div class="col-lg-4 my-1">
+                    <div class="complete d-flex justify-content-between align-items-center py-1 px-3 rounded-3" id="complete">
+                                <div class="status">
+                                  <p class="m-0 fs-4 fw-bold" id="comp" onclick="showCompleteData()"> Completed</p>
+                                </div>
+                                <div class="number">
                                   <span id="num-complete"> 0 </span>
-                               </div>
-                   </div>
-               </div>
-               <div class="col-lg-4 my-1">
+                                </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 my-1">
                   <div class="complete d-flex justify-content-between align-items-center py-1 px-3 rounded-3" id="delete">
                               <div class="status">
-                                <p class="m-0 fs-4 fw-bold" onclick="showdelData()" > Deleted </p>
+                                <p class="m-0 fs-4 fw-bold" id="dlt" onclick="showdelData()" > Deleted </p>
                               </div>
                               <div class="number">
                                 <span id="num-delete"> 0 </span>
                               </div>
                   </div>
-               </div>
-             </div>
-           </div>
+                </div>
+              </div>
+            </div>
           </div>
-         <!-- end status -->
-       </div>
-       <!-- start projects -->
+          <!-- end status -->
+        </div>
+        <!-- start projects -->
         <div class="row  bg-white rounded-3 p-4">
             <div class="col-lg-12 ">
               <div class="projects d-flex flex-wrap  align-items-center" id="allProjects">
-                    
+                    <!-- Added by JS -->
               </div>
             </div>
         </div>
@@ -170,6 +166,5 @@
   <script src="js/main.js"></script>
   <!-- sweet alert js CDN  -->
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  
   </body>
 </html>
